...
                    autoCapitalize="none"
                    autoCorrect={false}
                    keyboardType="email-address"
                    placeholderTextColor={COLORS.LIGHTGREY}
                    value={this.state.email}
                    onChangeText={(text) => this.setState({ email: text })}
                    testID={'Email Input Login'}
                  />
                </View>
                <View style={styles.lineSeparator} />
                <View style={styles.passwordSection}>
                  <Image
                    source={require('./img/password.png')}
...
                    placeholder="Password"
                    autoCapitalize="none"
                    autoCorrect={false}
                    placeholderTextColor={COLORS.LIGHTGREY}
                    value={this.state.password}
                    onChangeText={(text) => this.setState({ password: text })}
                    testID={'Password Input Login'}
                  />
                </View>
              </View>
              <TouchableOpacity
                style={styles.loginButton}
                onPress={(e) => this.userLogin(e)}
                testID={'Log In Button Login'}
              >
                <Text style={styles.loginText}>Log In</Text>
              </TouchableOpacity>
              <View style={styles.createForgetSection}>
                <Link
                  navFunction={() => NavigationService.navigate('Signup')}
                  text="Create an Account"
                  testID={'Create Account Login'}
...
