...
              <View style={styles.rectangleContainer}>
                <View style={styles.topOverlay}>
                  <View style={styles.logoWrapper}>
                    <Image
                      style={styles.logo}
                      source={require('./img/logo.png')}
                      testID={'Logo Dark Scan Product'}
                    />
                  </View>
                  <TouchableOpacity
                    onPress={this.toggle}
                    style={styles.menuButton}
                    testID={'Menu Scan Product'}
                  >
                    <Image
                      source={require('./img/menu.png')}
                      style={styles.menu}
                    />
                  </TouchableOpacity>
...
                      placeholder="Upc product number"
                      underlineColorAndroid="transparent"
                      autoCapitalize="none"
                      placeholderTextColor={COLORS.LIGHTGREY}
                      value={testUpcCode}
                      onChangeText={(text) => this.setState({ testUpcCode: text })}
                      testID={'Upc Product Number Scan Product'}
                    />
                  </View>
                }
                  {isEmulator && isEmpty(currentProduct) &&
                  <View style={[styles.testWrapper, { top: 150 }]}>
                    <TouchableOpacity
                      style={styles.testButton}
                      onPress={() => this.onBarCodeRead()}
                      testID={'Apply Button Scan Product'}
                    >
                      <Text style={styles.testText}>Apply</Text>
                    </TouchableOpacity>
                  </View>
                  }
                </View>
...
                    {loading && <Loader white />}
                  </View>
                  <View style={styles.leftAndRightOverlay} />
                </View>
                <View style={styles.bottomOverlay}>
                  <View style={styles.scanTextWrapper}>
                    <Text style={styles.scanText}>Scan product barcode</Text>
                  </View>
                  {currentProductVisible &&
                  <View style={styles.product}>
                    <View style={styles.productImageWrap}>
                      <Image
                        source={{ uri: currentProduct.imageUrl }}
...
            }
          />
          <ModalSimple
            isVisible={scanProductNoRecordModalOpen}
            onPress={closeScanProductNoRecordModal}
            headline={`This Product Is Not\nCarried By Our\nKitchen Service.`}
            testID={'Modal Product Code Not Valid Login'}
          />
          <ModalSimple
            isVisible={scanProductProblemModalOpen}
            onPress={closeScanProductProblemModal}
            headline={`There Was\nA Connection Issue.\nPlease Try Again.`}
          />
...
