...
        </View>
        <TouchableOpacity
          style={styles.confirmButton}
          onPress={() => this.goToNextScreen()}
          disabled={numProducts < 1}
        >
          <Text style={styles.confirmText}>Confirm and Pay</Text>
        </TouchableOpacity>
      </View>
    );
  }
}

...
